# llm-api-interface

./: .coverage  .gitignore  README.md  app.py  environment.yml  pyproject.toml  pytest.ini  setup.py  setup_project.py  summary-completed-work.md
.github/workflows/: bump.yml
config/: settings.py
core/: __init__.py
core/api/: client.py
core/models/: config.py  manager.py
core/security/: keys.py
doc/: api-documentation.yml
doc/api/: api-documentation.md
doc/guides/: quick-start-guides.md
interfaces/: __init__.py
interfaces/cli/: init.py  main.py
interfaces/cli/commands/: main.py
tests/unit/: test_api_client.py  test_cache_manager.py  test_cli.py  test_model_manager.py  test_settings.py
utils/cache/: manager.py
